week4/day4/labs/kyverno/bad-pod-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-latest
  namespace: week4-security
  labels:
    app: bad-latest
    owner: platform
spec:
  containers:
    - name: web
      image: nginx:latest
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
