week4/day4/labs/kyverno/bad-pod-privileged-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-privileged-hostpath
  namespace: week4-security
  labels:
    app: bad-privileged-hostpath
    owner: platform
spec:
  containers:
    - name: shell
      image: busybox:1.36
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
      volumeMounts:
        - name: host-root
          mountPath: /host
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
  volumes:
    - name: host-root
      hostPath:
        path: /
        type: Directory
