week4/day4/labs/kyverno/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-versioned-owner
  namespace: week4-security
  labels:
    app: good-versioned-owner
    owner: platform
spec:
  containers:
    - name: web
      image: nginx:1.27-alpine
      resources:
        requests:
          cpu: 10m
          memory: 16Mi
        limits:
          cpu: 50m
          memory: 32Mi
